# functional

./: CMakeLists.txt  LICENSE
include/: apply.h  compose.h  curry.h  function_traits.h  function_type_algorithm.h  named_param.h  type_algorithm.h  type_if.h  type_list.h  variadic_algorithm.h
test/: apply.cpp  compose.cpp  curry.cpp  main.cpp
